# waymirror

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/waymirror/: __init__.py  app.py  cli.py  desktop.py  geometry.py  picker.py  portal.py  preflight.py
src/waymirror/data/: hr.dobarkod.waymirror.desktop
tests/: test_geometry.py
