[project]
name = "waymirror"
dynamic = ["version"]
description = "Mirror a region of a Wayland screen into a normal window."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Senko Rasic", email = "senko@senko.net" }]
keywords = [
    "wayland", "screen", "mirror", "screencast", "screen-sharing",
    "pipewire", "gstreamer", "gtk4", "xdg-desktop-portal", "gnome",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment :: Gnome",
    "Topic :: Multimedia :: Video :: Capture",
]
# Runtime depends on SYSTEM packages (PyGObject + GStreamer plugins + GI
# typelibs + GTK4) that cannot be reliably installed from PyPI. See README.
dependencies = []

[project.optional-dependencies]
# Convenience for users who prefer pip to build the Python bindings instead of
# the distro's python3-gi. You STILL need the native GStreamer plugins +
# typelibs from your distro.
bindings = ["PyGObject>=3.50"]
dev = ["pytest"]

[project.scripts]
waymirror = "waymirror.cli:main"
# optional desktop integration (launcher + icon); run after install:
#   waymirror-setup install
waymirror-setup = "waymirror.desktop:main"

[project.urls]
Homepage = "https://github.com/senko/waymirror"
Repository = "https://github.com/senko/waymirror"
Issues = "https://github.com/senko/waymirror/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/waymirror/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/waymirror"]

[tool.hatch.build.targets.sdist]
include = ["src/waymirror", "tests", "README.md", "LICENSE", "CHANGELOG.md"]
